--- a/contactus.html
+++ b/contactus.html
@@ -3,7 +3,8 @@
     <head>
         <title>Home - Chinese Zodiac</title>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="style/styles.css" />
+        <link rel="stylesheet" href="style/bootstrap.min.css" media="screen" />
+		<link rel="stylesheet" href="style/styles.css" />
     </head>
 
     <body>
