--- a/12signs.html
+++ b/12signs.html
@@ -9,7 +9,7 @@
 
     <body>
         <div id="page">
-            <div id="header">
+            <header>
                 <br />
                 <br />
                 <img src="Images/ChineseZodiacBanner.png" alt="Chinese Zodiac Banner" />
@@ -33,8 +33,8 @@
                     </li>
                 </ul>
                 <br />
-            </div>
-            <div id="section">
+            </header>
+            <section>
                 <br />
                 <br />
                 <ul id="twelveSigns">
@@ -99,14 +99,14 @@
                         </a>
                     </li>
                 </ul>
-            </div>
+            </section>
             <br />
             <br />
-            <div id="footer">
+            <footer>
                 <br />
                  <a href='&#109;a&#105;lto&#58;%&#55;2o%62&#98;&#37;6&#57;%&#54;5&#112;&#101;rr%&#55;9&#50;%32&#64;&#103;mail&#46;co&#109;'>Robbie Perry</a> A00996041
                  <a href='mailto&#58;sno&#119;&#46;nh%3&#49;%306&#64;&#37;6&#55;ma%69&#108;&#46;c%6&#70;m'>David Perez</a> A00994971 ; set D
-            </div>
+            </footer>
         </div>
     </body>
 
