--- a/contactus.html
+++ b/contactus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Home - Chinese Zodiac</title>
+        <title>Contact - Chinese Zodiac</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style/bootstrap.min.css" media="screen" />
 		<link rel="stylesheet" href="style/styles.css" />
@@ -9,7 +9,7 @@
 
     <body>
         <div id="page">
-            <div id="header">
+            <header>
                 <br />
                 <br />
                 <img src="Images/ChineseZodiacBanner.png" alt="Chinese Zodiac Banner" />
@@ -33,8 +33,8 @@
                     </li>
                 </ul>
                 <br/>
-            </div>
-            <div id="section">
+            </header>
+            <section>
                 <div class="content">
                     <br />
                     <br />
@@ -81,12 +81,12 @@
                         </p>
                     </form>
                 </div>
-            </div>
-            <div id="footer">
+            </section>
+            <footer>
                 <br />
                  <a href='&#109;a&#105;lto&#58;%&#55;2o%62&#98;&#37;6&#57;%&#54;5&#112;&#101;rr%&#55;9&#50;%32&#64;&#103;mail&#46;co&#109;'>Robbie Perry</a> A00996041
                  <a href='mailto&#58;sno&#119;&#46;nh%3&#49;%306&#64;&#37;6&#55;ma%69&#108;&#46;c%6&#70;m'>David Perez</a> A00994971 ; set D
-            </div>
+            </footer>
         </div>
     </body>
 
