--- a/dragon.html
+++ b/dragon.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Home - Chinese Zodiac</title>
+        <title>Dragon - Chinese Zodiac</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style/bootstrap.min.css" media="screen" />
 		<link rel="stylesheet" href="style/styles.css" />
     </head>
     <body>
         <div id="page">
-            <div id="header">
+            <header>
                 <br />
                 <br />
                 <img src="Images/ChineseZodiacBanner.png" alt="Chinese Zodiac Banner" />
@@ -20,8 +20,8 @@
                     <li><a href="contactus.html"><img src="Images/ContactUs.png" alt="Contact Us Button" /></a></li>
                 </ul>
                 <br/>
-            </div>
-            <div id="section">
+            </header>
+            <section>
                 <div class="content">
                     <br />
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;Dragon is the fifth in the 12-year cycle of Chinese zodiac sign. The Years of the Dragon include 1916, 1928, 1940, 1952, 1964, 1976, 1988, 2000, 2012, 2024...</p>
@@ -41,12 +41,12 @@
                     <li><a href="pig.html"><img src="Images/pig.png" alt="Chinese Zodiac Pig"/><span class="sign-name">Pig</span></a></li>
                 </ul>
                 
-            </div>
-            <div id="footer">
+            </section>
+            <footer>
                 <br />
                 <a href='&#109;a&#105;lto&#58;%&#55;2o%62&#98;&#37;6&#57;%&#54;5&#112;&#101;rr%&#55;9&#50;%32&#64;&#103;mail&#46;co&#109;'>Robbie Perry</a> A00996041
                 <a href='mailto&#58;sno&#119;&#46;nh%3&#49;%306&#64;&#37;6&#55;ma%69&#108;&#46;c%6&#70;m'>David Perez</a> A00994971 ; set D
-            </div>
+            </footer>
         </div>
     </body>
 </html>
