--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="page">
-            <div id="header">
+            <header>
                 <br />
                 <br />
                 <img src="Images/ChineseZodiacBanner.png" alt="Chinese Zodiac Banner" />
@@ -20,8 +20,8 @@
                     <li><a href="contactus.html"><img src="Images/ContactUs.png" alt="Contact Us Button" /></a></li>
                 </ul>
                 <br/>
-            </div>
-            <div id="section">
+            </header>
+            <section>
                 <div class="content">
                     <br />
                     <p>The Chinese Zodiac, known as Sheng Xiao, is based on a twelve-year cycle, each year in that cycle related to an animal sign. These signs are the rat, ox, tiger, rabbit, dragon, snake, horse, sheep, monkey, rooster, dog and pig. It is calculated according to Chinese lunar calendar. Go ahead and navigate to the 12 signs page to learn more, or click on one of the following signs.</p>
@@ -41,12 +41,12 @@
                     <li><a href="pig.html"><img src="Images/pig.png" alt="Chinese Zodiac Pig"/><span class="sign-name">Pig</span></a></li>
                 </ul>
                 
-            </div>
-            <div id="footer">
+            </section>
+            <footer>
                 <br />
                 <a href='&#109;a&#105;lto&#58;%&#55;2o%62&#98;&#37;6&#57;%&#54;5&#112;&#101;rr%&#55;9&#50;%32&#64;&#103;mail&#46;co&#109;'>Robbie Perry</a> A00996041
                 <a href='mailto&#58;sno&#119;&#46;nh%3&#49;%306&#64;&#37;6&#55;ma%69&#108;&#46;c%6&#70;m'>David Perez</a> A00994971 ; set D
-            </div>
+            </footer>
         </div>
     </body>
 </html>
