--- a/sheep.html
+++ b/sheep.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Home - Chinese Zodiac</title>
+        <title>Sheep - Chinese Zodiac</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style/bootstrap.min.css" media="screen" />
 		<link rel="stylesheet" href="style/styles.css" />
     </head>
     <body>
         <div id="page">
-            <div id="header">
+            <header>
                 <br />
                 <br />
                 <img src="Images/ChineseZodiacBanner.png" alt="Chinese Zodiac Banner" />
@@ -20,8 +20,8 @@
                     <li><a href="contactus.html"><img src="Images/ContactUs.png" alt="Contact Us Button" /></a></li>
                 </ul>
                 <br/>
-            </div>
-            <div id="section">
+            </header>
+            <section>
                 <div class="content">
                     <br />
                     <p>&nbsp;&nbsp;&nbsp;&nbsp;Sheep / Goat is the eighth in the 12-year cycle of Chinese zodiac. The Years of the Sheep include 1919, 1931, 1943, 1955, 1967, 1979, 1991, 2003, 2015, 2027, 2039, 2051...</p>
@@ -41,12 +41,12 @@
                     <li><a href="pig.html"><img src="Images/pig.png" alt="Chinese Zodiac Pig"/><span class="sign-name">Pig</span></a></li>
                 </ul>
                 
-            </div>
-            <div id="footer">
+            </section>
+            <footer>
                 <br />
                 <a href='&#109;a&#105;lto&#58;%&#55;2o%62&#98;&#37;6&#57;%&#54;5&#112;&#101;rr%&#55;9&#50;%32&#64;&#103;mail&#46;co&#109;'>Robbie Perry</a> A00996041
                 <a href='mailto&#58;sno&#119;&#46;nh%3&#49;%306&#64;&#37;6&#55;ma%69&#108;&#46;c%6&#70;m'>David Perez</a> A00994971 ; set D
-            </div>
+            </footer>
         </div>
     </body>
 </html>
