Added 12 animal pages and their descriptions

--- a/dragon.html
+++ b/dragon.html
@@ -27,6 +27,10 @@
 			</header>
 			
 			<section class="text-center row bg-grey">
+			<div class="col-xs-12">
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;Dragon is the fifth in the 12-year cycle of Chinese zodiac sign. The Years of the Dragon include 1916, 1928, 1940, 1952, 1964, 1976, 1988, 2000, 2012, 2024...</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;The Dragon enjoys a very high reputation in Chinese culture. Chinese people regard themselves as descendents of the dragon. In ancient China, this imaginary creature was thought to speed across the sky with divine power. It is the token of authority, dignity, honor, success, luck, and capacity. Emperors entitled themselves exclusively as 'dragon'.</p>
+			</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="rat.html"><img src="Images/rat.png" alt="Chinese Zodiac Rat"><p>Rat</p></a>
 				</div>
@@ -38,9 +42,6 @@
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="rabbit.html"><img src="Images/rabbit.png" alt="Chinese Zodiac Rabbit"><p>Rabbit</p></a>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<a href="dragon.html"><img src="Images/dragon.png" alt="Chinese Zodiac Dragon"><p>Dragon</p></a>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="snake.html"><img src="Images/snake.png" alt="Chinese Zodiac Snake"><p>Snake</p></a>
