--- a/horse.html
+++ b/horse.html
@@ -27,6 +27,10 @@
 			</header>
 			
 			<section class="text-center row bg-grey">
+			<div class="col-xs-12">
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;Horse is the seventh in the 12-year cycle of Chinese zodiac sign. The Years of the Horse include 1918, 1930, 1942, 1954, 1966, 1978, 1990, 2002, 2014, 2026...</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;The Five Elements of Horse is Fire (Huo), which symbolizes enthusiasm and energy. The animal gives people an impression of independence and integrity. Its spirit is recognized to be the Chinese people's ethos - making unremitting efforts to improve themselves with passion and diligence.</p>
+			</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="rat.html"><img src="Images/rat.png" alt="Chinese Zodiac Rat"><p>Rat</p></a>
 				</div>
@@ -44,9 +48,6 @@
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="snake.html"><img src="Images/snake.png" alt="Chinese Zodiac Snake"><p>Snake</p></a>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<a href="horse.html"><img src="Images/horse.png" alt="Chinese Zodiac Horse"><p>Horse</p></a>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="ram.html"><img src="Images/ram.png" alt="Chinese Zodiac Ram"><p>Ram</p></a>
