--- a/monkey.html
+++ b/monkey.html
@@ -27,6 +27,10 @@
 			</header>
 			
 			<section class="text-center row bg-grey">
+			<div class="col-xs-12">
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;Monkey is the ninth in the 12-year cycle of Chinese zodiac. The Years of the Monkey include 1920, 1932, 1944, 1956, 1968, 1980, 1992, 2004, 2016, 2028...</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;The monkey is a clever animal. It is usually compared to a smart person. During the Spring and Autumn Period (770 - 476 BC), the dignified Chinese official title of marquis was pronounced 'Hou', the same as the pronunciation of ‘monkey’ in Chinese. The animal was thereby bestowed with an auspicious meaning.</p>
+			</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="rat.html"><img src="Images/rat.png" alt="Chinese Zodiac Rat"><p>Rat</p></a>
 				</div>
@@ -50,9 +54,6 @@
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="ram.html"><img src="Images/ram.png" alt="Chinese Zodiac Ram"><p>Ram</p></a>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<a href="monkey.html"><img src="Images/monkey.png" alt="Chinese Zodiac Monkey"><p>Monkey</p></a>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="rooster.html"><img src="Images/rooster.png" alt="Chinese Zodiac Rooster"><p>Rooster</p></a>
