--- a/ox.html
+++ b/ox.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>12 Signs - Chinese Zodiac</title>
+        <title>Ox - Chinese Zodiac</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style/darkly/bootstrap.min.css" media="screen" />
 		<link rel="stylesheet" href="style/styles.css" />
@@ -27,11 +27,12 @@
 			</header>
 			
 			<section class="text-center row bg-grey">
+			<div class="col-xs-12">
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;Ox is the second in the 12-year cycle of Chinese zodiac sign. Years of the Ox include 1913, 1925, 1937, 1949, 1961, 1973, 1985, 1997, 2009, 2021, 2033...</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;Oxen used to be capable farming tools in agricultural society, which attach to the symbol of diligence, persistence and honesty. People born in the Year of Ox are probably tardy in action, but industrious and cautious. Most of them are conservative and hold their faith firmly.</p>
+			</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="rat.html"><img src="Images/rat.png" alt="Chinese Zodiac Rat"><p>Rat</p></a>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<a href="ox.html"><img src="Images/ox.png" alt="Chinese Zodiac Ox"><p>Ox</p></a>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="tiger.html"><img src="Images/tiger.png" alt="Chinese Zodiac Tiger"><p>Tiger</p></a>
