--- a/rabbit.html
+++ b/rabbit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>12 Signs - Chinese Zodiac</title>
+        <title>Rabbit - Chinese Zodiac</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style/darkly/bootstrap.min.css" media="screen" />
 		<link rel="stylesheet" href="style/styles.css" />
@@ -27,6 +27,10 @@
 			</header>
 			
 			<section class="text-center row bg-grey">
+			<div class="col-xs-12">
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;Rabbit is the fourth in the 12-year cycle of Chinese zodiac sign. The Years of the Rabbit include 1915, 1927, 1939, 1951, 1963, 1975, 1987, 1999, 2011, 2023...</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;For Chinese people, the rabbit is a tame creature representing hope for a long time. It is tender and lovely. The moon goddess Chang'e in Chinese legend had a rabbit as her pet, which stimulated the thought that only this creature was amiable enough to match her noble beauty. People with Rabbit as Chinese zodiac sign are not aggressive but approachable. They have a decent, noble and elegant manner.</p>
+			</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="rat.html"><img src="Images/rat.png" alt="Chinese Zodiac Rat"><p>Rat</p></a>
 				</div>
@@ -35,9 +39,6 @@
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="tiger.html"><img src="Images/tiger.png" alt="Chinese Zodiac Tiger"><p>Tiger</p></a>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<a href="rabbit.html"><img src="Images/rabbit.png" alt="Chinese Zodiac Rabbit"><p>Rabbit</p></a>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="dragon.html"><img src="Images/dragon.png" alt="Chinese Zodiac Dragon"><p>Dragon</p></a>
