--- a/ram.html
+++ b/ram.html
@@ -27,6 +27,10 @@
 			</header>
 			
 			<section class="text-center row bg-grey">
+			<div class="col-xs-12">
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;Sheep / Ram is the eighth in the 12-year cycle of Chinese zodiac. The Years of the Sheep include 1919, 1931, 1943, 1955, 1967, 1979, 1991, 2003, 2015, 2027, 2039, 2051...</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;Sheep (goat, or ram) is among the animals that people like most. It is gentle and calm. Since ancient times, people have learned to use its fleece to make writing brushes and fur to keep warm. The white cute creature often reminds people of beautiful things.</p>
+			</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="rat.html"><img src="Images/rat.png" alt="Chinese Zodiac Rat"><p>Rat</p></a>
 				</div>
@@ -47,9 +51,6 @@
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="horse.html"><img src="Images/horse.png" alt="Chinese Zodiac Horse"><p>Horse</p></a>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<a href="ram.html"><img src="Images/ram.png" alt="Chinese Zodiac Ram"><p>Ram</p></a>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="monkey.html"><img src="Images/monkey.png" alt="Chinese Zodiac Monkey"><p>Monkey</p></a>
