--- a/rat.html
+++ b/rat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>12 Signs - Chinese Zodiac</title>
+        <title>Rat - Chinese Zodiac</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style/darkly/bootstrap.min.css" media="screen" />
 		<link rel="stylesheet" href="style/styles.css" />
@@ -27,9 +27,10 @@
 			</header>
 			
 			<section class="text-center row bg-grey">
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<a href="rat.html"><img src="Images/rat.png" alt="Chinese Zodiac Rat"><p>Rat</p></a>
-				</div>
+			<div class="col-xs-12">
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;Rat is the first in the 12-year cycle of Chinese zodiac. The Years of the Rat include 1912, 1924, 1936, 1948, 1960, 1972, 1984, 1996, 2008, 2020, 2032...</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;Though people consider the rat not adorable, and it even makes its way into derogatory languages, it ranks first on the Chinese zodiac signs. It has characteristics of an animal with spirit, wit, alertness, delicacy, flexibility and vitality.</p>
+			</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="ox.html"><img src="Images/ox.png" alt="Chinese Zodiac Ox"><p>Ox</p></a>
 				</div>
