--- a/rooster.html
+++ b/rooster.html
@@ -27,6 +27,10 @@
 			</header>
 			
 			<section class="text-center row bg-grey">
+			<div class="col-xs-12">
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;Rooster is the tenth in the 12-year cycle of Chinese zodiac sign. The Years of the Rooster include 1921, 1933, 1945, 1957, 1969, 1981, 1993, 2005, 2017, 2029...</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;Rooster is almost the epitome of fidelity and punctuality. For ancestors who had no alarm clocks, the crowing was significant, as it could awaken people to get up and start to work. In Chinese culture, another symbolic meaning of chicken carries is exorcising evil spirits.</p>
+			</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="rat.html"><img src="Images/rat.png" alt="Chinese Zodiac Rat"><p>Rat</p></a>
 				</div>
@@ -53,9 +57,6 @@
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="monkey.html"><img src="Images/monkey.png" alt="Chinese Zodiac Monkey"><p>Monkey</p></a>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<a href="rooster.html"><img src="Images/rooster.png" alt="Chinese Zodiac Rooster"><p>Rooster</p></a>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="dog.html"><img src="Images/dog.png" alt="Chinese Zodiac Dog"><p>Dog</p></a>
