--- a/snake.html
+++ b/snake.html
@@ -27,6 +27,10 @@
 			</header>
 			
 			<section class="text-center row bg-grey">
+			<div class="col-xs-12">
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;Snake is the sixth in the 12-year cycle of Chinese zodiac sign. The Years of the Snake include 1917, 1929, 1941, 1953, 1965, 1977, 1989, 2001, 2013, 2025, 2037...</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;Snake carries the meanings of malevolence, cattiness and mystery, as well as acumen and divination. In some places, people believe that a snake found in their court can bring delight. However, in most cases, this animal is considered evil, which scares people from the bottom of the heart. There are some idioms in China indicating the danger of this animal, for example, once bitten by the snake twice shy of ten years.</p>
+			</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="rat.html"><img src="Images/rat.png" alt="Chinese Zodiac Rat"><p>Rat</p></a>
 				</div>
@@ -41,9 +45,6 @@
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="dragon.html"><img src="Images/dragon.png" alt="Chinese Zodiac Dragon"><p>Dragon</p></a>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<a href="snake.html"><img src="Images/snake.png" alt="Chinese Zodiac Snake"><p>Snake</p></a>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="horse.html"><img src="Images/horse.png" alt="Chinese Zodiac Horse"><p>Horse</p></a>
