--- a/tiger.html
+++ b/tiger.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>12 Signs - Chinese Zodiac</title>
+        <title>Tiger - Chinese Zodiac</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style/darkly/bootstrap.min.css" media="screen" />
 		<link rel="stylesheet" href="style/styles.css" />
@@ -27,14 +27,15 @@
 			</header>
 			
 			<section class="text-center row bg-grey">
+			<div class="col-xs-12">
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;Tiger is the third in the 12-year cycle of Chinese zodiac sign. The Years of the Tiger include 1914, 1926, 1938, 1950, 1962, 1974, 1986, 1998, 2010, 2022, 2034...</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;Tigers, considered to be brave, cruel, forceful, stately and terrifying, are the symbol of power and lordliness. In ancient times, people usually compared emperors or grandees with the tiger. Court officials often said that 'accompanying the emperor is just like being at the side of a tiger'. There are also many legends about this animal.</p>
+			</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="rat.html"><img src="Images/rat.png" alt="Chinese Zodiac Rat"><p>Rat</p></a>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="ox.html"><img src="Images/ox.png" alt="Chinese Zodiac Ox"><p>Ox</p></a>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<a href="tiger.html"><img src="Images/tiger.png" alt="Chinese Zodiac Tiger"><p>Tiger</p></a>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="rabbit.html"><img src="Images/rabbit.png" alt="Chinese Zodiac Rabbit"><p>Rabbit</p></a>
