--- a/dog.html
+++ b/dog.html
@@ -27,6 +27,10 @@
 			</header>
 			
 			<section class="text-center row bg-grey">
+			<div class="col-xs-12">
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;Dog is the eleventh in the 12-year cycle of Chinese zodiac sign. The Years of the Dog include 1922, 1934, 1946, 1958, 1970, 1982, 1994, 2006, 2018, 2030, 2042...</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;Dog is man's good friend who can understand the human's spirit and obey its master, whether he is wealthy or not. The Chinese regard it as an auspicious animal. If a dog happens to come to a house, it symbolizes the coming of fortune. The invincible God Erlang in Chinese legend used a loyal wolfhound to help him capture monsters.</p>
+			</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="rat.html"><img src="Images/rat.png" alt="Chinese Zodiac Rat"><p>Rat</p></a>
 				</div>
@@ -56,9 +60,6 @@
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="rooster.html"><img src="Images/rooster.png" alt="Chinese Zodiac Rooster"><p>Rooster</p></a>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<a href="dog.html"><img src="Images/dog.png" alt="Chinese Zodiac Dog"><p>Dog</p></a>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="pig.html"><img src="Images/pig.png" alt="Chinese Zodiac Pig"><p>Pig</p></a>
