--- a/pig.html
+++ b/pig.html
@@ -27,6 +27,10 @@
 			</header>
 			
 			<section class="text-center row bg-grey">
+			<div class="col-xs-12">
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;Pig is the twelfth in the 12-year cycle of Chinese zodiac sign. The Years of the Pig include 1923, 1935, 1947, 1959, 1971, 1983, 1995, 2007, 2019, 2031, 2043...</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp;Pig is not thought to be a smart animal in China. It likes sleeping and eating and becomes fat. Thus it usually features laziness and clumsiness. On the positive side, it behaves itself, has no calculation to harm others, and can bring affluence to people. Consequently, it has been regarded as wealth.</p>
+			</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="rat.html"><img src="Images/rat.png" alt="Chinese Zodiac Rat"><p>Rat</p></a>
 				</div>
@@ -59,9 +63,6 @@
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12">
 					<a href="dog.html"><img src="Images/dog.png" alt="Chinese Zodiac Dog"><p>Dog</p></a>
-				</div>
-				<div class="col-md-3 col-sm-6 col-xs-12">
-					<a href="pig.html"><img src="Images/pig.png" alt="Chinese Zodiac Pig"><p>Pig</p></a>
 				</div>
 			</section>
 			
