--- a/index.html
+++ b/index.html
@@ -61,62 +61,62 @@
 						<div class="carousel-inner" role="listbox">
 							<div class="item active">
 								<h3>Rat</h3>
-								<a href="rat.html"><img src="Images/rat.png" alt="Rat" width="400" height="515">
+								<a href="rat.html"><img src="Images/rat.png" alt="Rat" width="400" height="515"></a>
 							</div>
 
 							<div class="item">
 								<h3>Ox</h3>
-								<a href="ox.html"><img src="Images/ox.png" alt="Ox" width="400" height="515">
+								<a href="ox.html"><img src="Images/ox.png" alt="Ox" width="400" height="515"></a>
 							</div>
 
 							<div class="item">
 								<h3>Tiger</h3>
-								<a href="tiger.html"><img src="Images/tiger.png" alt="Tiger" width="400" height="515">
+								<a href="tiger.html"><img src="Images/tiger.png" alt="Tiger" width="400" height="515"></a>
 							</div>
 
 							<div class="item">
 								<h3>Rabbit</h3>
-								<a href="rabbit.html"><img src="Images/rabbit.png" alt="Rabbit" width="400" height="515">
+								<a href="rabbit.html"><img src="Images/rabbit.png" alt="Rabbit" width="400" height="515"></a>
 							</div>
 
 							<div class="item">
 								<h3>Dragon</h3>
-								<a href="dragon.html"><img src="Images/dragon.png" alt="Dragon" width="400" height="515">
+								<a href="dragon.html"><img src="Images/dragon.png" alt="Dragon" width="400" height="515"></a>
 							</div>
 
 							<div class="item">
 								<h3>Snake</h3>
-								<a href="snake.html"><img src="Images/snake.png" alt="Snake" width="400" height="515">
+								<a href="snake.html"><img src="Images/snake.png" alt="Snake" width="400" height="515"></a>
 							</div>
 
 							<div class="item">
 								<h3>Horse</h3>
-								<a href="horse.html"><img src="Images/horse.png" alt="Horse" width="400" height="515">
+								<a href="horse.html"><img src="Images/horse.png" alt="Horse" width="400" height="515"></a>
 							</div>
 
 							<div class="item">
 								<h3>Ram</h3>
-								<a href="ram.html"><img src="Images/ram.png" alt="Ram" width="400" height="515">
+								<a href="ram.html"><img src="Images/ram.png" alt="Ram" width="400" height="515"></a>
 							</div>
 
 							<div class="item">
 								<h3>Monkey</h3>
-								<a href="monkey.html"><img src="Images/monkey.png" alt="Monkey" width="400" height="515">
+								<a href="monkey.html"><img src="Images/monkey.png" alt="Monkey" width="400" height="515"></a>
 							</div>
 
 							<div class="item">
 								<h3>Rooster</h3>
-								<a href="rooster.html"><img src="Images/rooster.png" alt="Rooster" width="400" height="515">
+								<a href="rooster.html"><img src="Images/rooster.png" alt="Rooster" width="400" height="515"></a>
 							</div>
 
 							<div class="item">
 								<h3>Dog</h3>
-								<a href="dog.html"><img src="Images/dog.png" alt="Dog" width="400" height="515">
+								<a href="dog.html"><img src="Images/dog.png" alt="Dog" width="400" height="515"></a>
 							</div>
 
 							<div class="item">
 								<h3>Pig</h3>
-								<a href="pig.html"><img src="Images/pig.png" alt="Pig" width="400" height="515">
+								<a href="pig.html"><img src="Images/pig.png" alt="Pig" width="400" height="515"></a>
 							</div>
 						</div>
 
