--- a/contactus.html
+++ b/contactus.html
@@ -29,8 +29,28 @@
 			</header>
 			
 			<section class="text-center row bg-grey">
-				
+				<br />
+                    <br />
+					<form id ="contactUsForm" method="post" action="http://php.vncvr.ca/zodiac/">
+					  <div class="form-group">
+						<label for="name">Name:&nbsp;&nbsp;&nbsp;&nbsp;</label>
+						<input type="text" name="Name" maxlength="100" class="form-control" placeholder="Name Lastname" required />
+						<br/>
+						<label for="email">Email:&nbsp;&nbsp;&nbsp;&nbsp;</label>
+						<input type="text" name="Email" maxlength="100" class="form-control" placeholder="Example@domain.ca" required />
+						<br/>
+						<label for="comment">Comments and Feedback:&nbsp;&nbsp;&nbsp;&nbsp;</label>
+						<textarea name="Comment" rows="7" class="form-control" placeholder="Any comments and feedback is welcomed "></textarea>
+						<input type="hidden" value="David Perez" name="Student1Name" />
+						<input type="hidden" value="Robbie Perry" name="Student2Name" />
+						<input type="hidden" value="D" name="Set" />
+						<br/>
+						<button type="submit" class="btn btn-info">Submit</button>
+					  </div>
+					</form>
 			</section>
+			<br/>
+			<br/>
 			
 			<footer class="row bg-warning text-center">
 				<div class="col-sm-6">
