--- a/contactus.html
+++ b/contactus.html
@@ -34,13 +34,13 @@
 					<form id ="contactUsForm" method="post" action="http://php.vncvr.ca/zodiac/">
 					  <div class="form-group">
 						<label for="name">Name:&nbsp;&nbsp;&nbsp;&nbsp;</label>
-						<input type="text" name="Name" maxlength="100" class="form-control" placeholder="Name Lastname" required />
+						<input type="text" id="name" name="Name" maxlength="100" class="form-control" placeholder="Name Lastname" required />
 						<br/>
 						<label for="email">Email:&nbsp;&nbsp;&nbsp;&nbsp;</label>
-						<input type="text" name="Email" maxlength="100" class="form-control" placeholder="Example@domain.ca" required />
+						<input type="text" id="email" name="Email" maxlength="100" class="form-control" placeholder="Example@domain.ca" required />
 						<br/>
 						<label for="comment">Comments and Feedback:&nbsp;&nbsp;&nbsp;&nbsp;</label>
-						<textarea name="Comment" rows="7" class="form-control" placeholder="Any comments and feedback is welcomed "></textarea>
+						<textarea name="Comment" id="comment" rows="7" class="form-control" placeholder="Any comments and feedback is welcomed "></textarea>
 						<input type="hidden" value="David Perez" name="Student1Name" />
 						<input type="hidden" value="Robbie Perry" name="Student2Name" />
 						<input type="hidden" value="D" name="Set" />
