--- a/contactus.html
+++ b/contactus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Home - Chinese Zodiac</title>
+        <title>Contact Us - Chinese Zodiac</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style/darkly/bootstrap.min.css" media="screen" />
 		<link rel="stylesheet" href="style/styles.css" />
