--- a/rooster.html
+++ b/rooster.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>12 Signs - Chinese Zodiac</title>
+        <title>Rooster - Chinese Zodiac</title>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style/darkly/bootstrap.min.css" media="screen" />
 		<link rel="stylesheet" href="style/styles.css" />
